# progress_tracker

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.vds.yml  docker-compose.yml  pyproject.toml
.rules/: bot_api.md  db.md  general.md  handlers.md  services.md  storage.md  video.md
migrations/: env.py
migrations/versions/: 385fcdaea572_initial_schema.py
src/progress_tracker/: __init__.py  __main__.py  bot.py  config.py  logging_setup.py
src/progress_tracker/bot_api/: __init__.py  fetcher.py  files.py  methods.py  session.py
src/progress_tracker/db/: __init__.py  models.py  repos.py  session.py
src/progress_tracker/handlers/: __init__.py  compile_flow.py  delete_flow.py  start.py  video_upload.py
src/progress_tracker/middlewares/: __init__.py  db.py
src/progress_tracker/services/: __init__.py  compiler.py  delete_video.py  ingest.py  persistence.py
src/progress_tracker/storage/: __init__.py  base.py  local.py
src/progress_tracker/utils/: __init__.py  hashtags.py
src/progress_tracker/video/: __init__.py  compile.py  probe.py  select.py
telegram-bot-api/: Dockerfile  entrypoint.sh
tests/: conftest.py  test_bot.py  test_bot_api_fetcher.py  test_bot_api_files.py  test_bot_api_session.py  test_config.py  test_db_models.py  test_db_repos.py  test_db_session.py  test_handlers_compile_flow.py  test_handlers_delete_flow.py  test_handlers_root.py  test_handlers_start.py  test_handlers_video_upload.py  test_logging_setup.py  test_middlewares.py  test_services_compiler.py  test_services_delete_video.py  test_services_ingest.py  test_services_persistence.py  test_storage_local.py  test_utils_hashtags.py  test_video_compile_e2e.py  test_video_compile_graph.py  test_video_probe.py  test_video_select.py
