[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "progress-tracker"
version = "0.1.0"
description = "Telegram bot that compiles sport & dance progress videos from tagged uploads."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "progress-tracker contributors" }]
keywords = ["telegram", "bot", "video", "ffmpeg", "progress", "sport", "dance"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "aiogram>=3.5,<4.0",
    "aiohttp-socks>=0.8",
    "SQLAlchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "testcontainers[postgresql]>=4.4",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-aiofiles",
]

[project.scripts]
progress-tracker = "progress_tracker.__main__:main"

[project.urls]
Homepage = "https://github.com/your-org/progress-tracker"
Issues = "https://github.com/your-org/progress-tracker/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/progress_tracker"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle + pyflakes
    "I",                # isort
    "B",                # bugbear
    "UP",               # pyupgrade
    "SIM",              # simplify
    "RUF",              # ruff-specific
    "ASYNC",            # async lints
]
ignore = ["E501"]       # handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
plugins = []

[[tool.mypy.overrides]]
module = ["testcontainers.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"
# /app is owned by root in the Docker image but tests run as appuser; keep the
# cache in /tmp so it's always writable.
cache_dir = "/tmp/.pytest_cache"
